# real-voice-agent-free

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHAT_HISTORY.md  CODE_OF_CONDUCT.md  CONTEXT_MAP.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  USAGE.md  WORK_SNAPSHOT_2026-04-07.md  docker-compose.yml  landing.html  pyproject.toml  robots.txt  sitemap.xml  spec.txt
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 20260309_0001_create_agent_tables.py  20260309_0002_add_bookings_events_webhooks.py  20260309_0003_add_calls_tables.py  20260310_0004_add_organizations_and_api_keys.py  20260310_0005_add_org_scoping_columns.py  20260310_0006_add_billing_tables.py  20260310_0007_add_webhook_retry_state.py  20260310_0008_add_runtime_turn_fields.py
apps/api/: README.md
apps/api/src/voiceagent_api/: __init__.py  app.py  auth.py  cache.py  config.py  db.py  errors.py  lemonsqueezy.py  middleware.py  models.py  otel.py  runtime.py  schemas.py  store.py  webhooks.py  worker.py
apps/api/src/voiceagent_api/adapters/: calendar.py  llm.py  openai_client.py  stt.py  tts.py
apps/api/src/voiceagent_api/routers/: __init__.py  _helpers.py  agents.py  api_keys.py  billing.py  bookings.py  calls.py  dashboard.py  events.py  health.py  integrations.py  knowledge_bases.py  organizations.py  partners.py  phone_numbers.py  usage.py  webhooks.py
apps/web/: README.md  api.js  app.js  index.html  render.js  styles.css
backlog/: README.md  epics-v1.md  stories-sprint-01.md
contracts/: README.md  api-surface-v1.md  event-schema-v1.md  provider-adapter-interface-v1.md
docs/: README.md  api-quickstart.md  architecture-v1.md  bmad-assets-and-workflow-plan.md  control-plane.md  openai-runtime.md  product-strategy-and-competitor-research.md  scheduling-and-bookings.md  self-hosting.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml.example
monitoring/: otel-collector-config.yaml  prometheus.yml
monitoring/alertmanager/: alertmanager.yml
nginx/: nginx.conf
prd/: README.md  prd-v1.md  product-brief-v1.md
tests/: conftest.py  load_test.py  test_api.py  test_runtime.py  test_worker.py
