[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceagent"
version = "0.1.0"
description = "Open-source voice AI platform and API for SMB service businesses"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
  "voice ai",
  "voice agent",
  "ai phone agent",
  "call automation",
  "appointment scheduling",
  "customer support automation",
  "open-source",
  "voice bot",
  "voice api",
  "smb automation",
]
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
voiceagent-worker = "voiceagent_api.worker:main"

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "apps/api/src"}

[tool.setuptools.packages.find]
where = ["apps/api/src"]
