[project]
name = "voiceagent"
version = "0.2.0"
description = "Open-source voice AI platform and API for SMB service businesses"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = [
  "voice ai",
  "voice agent",
  "ai phone agent",
  "call automation",
  "appointment scheduling",
  "customer support automation",
  "open-source",
  "voice bot",
  "voice api",
  "smb automation",
]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "bcrypt>=4.2.0",
    "httpx>=0.28.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.0",
    "asyncpg>=0.30.0",
    "valkey>=6.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "openai>=2.30.0",
    "prometheus-client>=0.20.0",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "locust>=2.32.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
voiceagent-worker = "voiceagent_api.worker:main"

[tool.uv]
dev-dependencies = [
    "bcrypt>=4.2.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "locust>=2.32.0",
    "pip-audit>=2.7.0",
]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider --ignore=tests/load_test.py"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ASYNC"]

[tool.setuptools]
package-dir = {"" = "apps/api/src"}

[tool.setuptools.packages.find]
where = ["apps/api/src"]
